# mriqc-aggregator

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  compose.override.yaml  compose.prod.yaml  compose.yaml  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
deploy/nginx/: Dockerfile  default.conf
docs/: backend.md  data-overview.md  dedupe-review.md  erd.md  ingestion.md  operations.md  representative-sampling.md  schema-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: dashboard-filters.tsx  measures-sidebar.tsx  metric-histogram-card.tsx  qc-measures-sidebar.tsx  report-upload-panel.tsx
frontend/src/components/ui/: sidebar.tsx
frontend/src/lib/: api.ts  uploaded-report.ts
frontend/src/types/: ui.ts
frontend/tests/: dashboard.spec.ts
migrations/: env.py  script.py.mako
migrations/versions/: 20260507_0001_schema_edge_cases.py
mriqc_aggregator/: __init__.py  api.py  app.py  cache.py  canonical_views.py  cli.py  database.py  loading.py  migration.py  models.py  parsing.py  planning.py  profiling.py  storage.py  workflows.py
scripts/: migrate_db.py  profile_db.py  pull_representative_sample.py  run_tests.sh  seed_dashboard_fixture.py  start_api.py
terraform/loader-host/: README.md
terraform/loader-host/scripts/: bootstrap.sh
tests/: conftest.py  test_cache.py  test_cli.py  test_database.py  test_loading.py  test_models.py  test_planning.py  test_profiling.py
