[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mriqc-aggregator"
version = "0.1.0"
description = "Representative raw data pulls from the MRIQC Web API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<0.29",
]

[project.scripts]
mriqc-aggregator = "mriqc_aggregator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mriqc_aggregator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
